[delivered #182065700]Rendeing issue on firefox fixed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -256,7 +256,6 @@ label[for=cardSelection] {
   display: block;
   font-size: 1.4em;
 }
-
 label[for=cardSelection], 
 label[for=numOfCopies],
 label[for=selDeck],
@@ -381,11 +380,15 @@ table {
 .help p {
   padding-left: 10px;
 }
+#num-of-copies {
+  width: 3.5em;
+}
 /* For small laptops */
-@media only screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
   .add-card input[type="submit"],
   #filter input[type="submit"] {
     font-size: .78em;
+    padding: 5px 20px;
   }
   .add-card label[for="cardSelection"] {
     font-size: 1.2em;
@@ -410,9 +413,10 @@ table {
     margin: auto 0;
   }
 }
-
-@media only screen and (max-width: 1000px) {
-  
+@media screen and (max-width: 1000px) {
+  .nav > ul {
+      font-size: 1em;
+  }
   #card-table {
     padding: 5px;
   }
@@ -461,8 +465,8 @@ table {
     height: 0.91em;
   }
   .foiled-radio-options {
-    width: 50%;
     display: block;
+    width: 50%;
   }
 }
 @media only screen and (max-width: 820px) {
